--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -3,12 +3,12 @@
   cursor: pointer;
   font-size: 1.5rem;
   font-weight: bold;
+  margin-left: 1.5rem;
 }
 
 .checkbox {
   appearance: none;
   -webkit-appearance: none;
-  /* Safari and Chrome */
   margin: 0.25rem;
   width: 1rem;
   height: 1rem;
@@ -28,19 +28,26 @@
 }
 
 .home {
-  margin-top: 3.5rem;
+  margin-top: 4rem;
+  font-weight: bold;
 }
 
-.home-prefecture-aria {
-  background-color: #E0E0E0;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  font-family: serif;
+.home-title {
+  font-size: 2rem;
+}
+
+.home-select-container {
+  margin-left: 1.5rem;
+}
+
+.home-select-value {
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 .home-graph-aria {
   padding: 1rem;
-  height: 80vh;
-  background: linear-gradient(to top right, #ffffff, #f0f8ff);
+  height: 60vh;
 }
 
 .graph {
